<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.mirza.adil.utils.widgets.MaskNumberEditText
        android:id="@+id/etPassCodeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:padding="@dimen/_20sdp"
        android:maxLength="12"
        android:layout_marginTop="@dimen/_100sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_23sdp"
        app:fet_autoFillNumbers="true"
        app:fet_autoFillNumbersTextColor="@android:color/darker_gray"
        app:fet_currencySymbol="AED"
        app:fet_currencySymbolTextColor="@android:color/darker_gray"
        app:fet_decimalLength="2"
        app:fet_drawableGravity="fet_center"
        app:fet_drawablePadding="0dp"
        app:fet_showThousandsSeparator="true"
        app:flow_horizontalGap="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/llPasscodeFirstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/etPassCodeText">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button1"
            style="@style/ButtonTransactionScreen"
            android:layout_marginStart="20dp"
            android:text="@string/one" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button2"
            style="@style/ButtonTransactionScreen"
            android:text="@string/two" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button3"
            style="@style/ButtonTransactionScreen"
            android:text="@string/three" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPasscodeSecondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llPasscodeFirstRow">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button4"
            style="@style/ButtonTransactionScreen"
            android:layout_marginStart="20dp"
            android:text="@string/four" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button5"
            style="@style/ButtonTransactionScreen"
            android:text="@string/five" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button6"
            style="@style/ButtonTransactionScreen"
            android:text="@string/six" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPasscodeThirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llPasscodeSecondRow">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button7"
            style="@style/ButtonTransactionScreen"
            android:layout_marginStart="20dp"
            android:text="@string/seven" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button8"
            style="@style/ButtonTransactionScreen"
            android:text="@string/eight" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button9"
            style="@style/ButtonTransactionScreen"
            android:text="@string/nine" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llPasscodeThirdRow">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buttonDot"
            style="@style/ButtonTransactionScreen"
            android:layout_marginStart="20dp"
            android:text="@string/dot"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_h5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/button0"
            style="@style/ButtonTransactionScreen"
            android:text="@string/zero" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buttonRemove"
            style="@style/ButtonTransactionScreen"
            android:text="@string/cross" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>